--- a/Bloggie.Web/Views/Account/Login.cshtml
+++ b/Bloggie.Web/Views/Account/Login.cshtml
@@ -29,7 +29,7 @@
                     <button type="submit" class="btn btn-dark">Login</button>
                 </div>
 
-             @*   <input type="hidden" asp-for="ReturnUrl" />*@
+                <input type="hidden" asp-for="ReturnUrl" />
             </form>
         </div>
     </div>
