--- a/Bloggie.Web/Views/Shared/_Layout.cshtml
+++ b/Bloggie.Web/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        @if (signInManager.IsSignedIn(User) && User.IsInRole("Admin"))
+                        {
+                            
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Admin
@@ -67,6 +70,7 @@
                             
                             </ul>
                         </li>
+                        }
                     </ul>
                     <div class="d-flex align-items-center">
 
