--- a/Bloggie.Web/Views/Blogs/Index.cshtml
+++ b/Bloggie.Web/Views/Blogs/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Bloggie.Web.Models.Domain.BlogPost
+﻿@model Bloggie.Web.Models.viewModels.BlogDetailViewModel
 @{
     ViewData["Title"] = Model.PageTitle;
 }
@@ -16,8 +16,8 @@
                     <span class="text-secondary">@Model.PublishedDate.ToShortDateString()</span>
                 </div>
 
-           @*     <div class="mb-3">
-                    @if (signInManager.IsSignedIn(User))
+               <div class="mb-3">
+                  @*   @if (signInManager.IsSignedIn(User))
                     {
                         if (Model.Liked)
                         {
@@ -31,10 +31,10 @@
                                 <i class="bi bi-hand-thumbs-up"></i>
                             </a>
                         }
-                    }
+                    } *@
 
                     <span id="totalLikes">@Model.TotalLikes</span> likes
-                </div>*@
+                </div>
 
                 <div class="mb-3 d-flex">
                     @foreach (var tag in Model.Tags)
