--- a/Bloggie.Web/Views/Blogs/Index.cshtml
+++ b/Bloggie.Web/Views/Blogs/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@model Bloggie.Web.Models.viewModels.BlogDetailViewModel
+﻿﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> signInManager
+@inject UserManager<IdentityUser> userManager
+@model Bloggie.Web.Models.viewModels.BlogDetailViewModel
 @{
     ViewData["Title"] = Model.PageTitle;
 }
@@ -17,7 +20,7 @@
                 </div>
 
                <div class="mb-3">
-                  @*   @if (signInManager.IsSignedIn(User))
+                    @if (signInManager.IsSignedIn(User))
                     {
                         if (Model.Liked)
                         {
@@ -31,7 +34,7 @@
                                 <i class="bi bi-hand-thumbs-up"></i>
                             </a>
                         }
-                    } *@
+                    }
 
                     <span id="totalLikes">@Model.TotalLikes</span> likes
                 </div>
@@ -100,3 +103,45 @@
         </div>
     </div>
 </div>
+
+@section Scripts {
+    <script>
+        const btnLikeElement = document.getElementById('btnLike');
+        const totalLikeElement = document.getElementById('totalLikes');
+
+        async function getTotalLikes() {
+            fetch('/api/blogpostlike/@Model.Id/totalLikes', {
+                method: 'GET',
+                headers: {
+                    'Content-Type': 'application/json',
+                    'Accept': '*/*'
+                }
+            })
+                .then(data => data.json())
+                .then(result => totalLikeElement.innerHTML = result);
+        }
+
+
+        async function addLikeForBlog() {
+            fetch('/api/BlogPostLike/Add', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                    'Accept': '*/*'
+                },
+                body: JSON.stringify({
+                    blogPostId: '@Model.Id',
+                    userId: '@userManager.GetUserId(User)'
+                })
+            }).then(() => {
+                btnLikeElement.innerHTML = '<i class="bi bi-hand-thumbs-up-fill"></i>';
+                btnLikeElement.removeEventListener('click', addLikeForBlog);
+                getTotalLikes();
+            });
+        }
+
+
+        btnLikeElement.addEventListener('click', addLikeForBlog);
+
+    </script>
+}
