--- a/Bloggie.Web/Views/Blogs/Index.cshtml
+++ b/Bloggie.Web/Views/Blogs/Index.cshtml
@@ -53,7 +53,7 @@
                 </div>
 
 
-            @*    <div class="card">
+               <div class="card">
                     <div class="card-header">
                         <h5>Comments</h5>
 
@@ -71,8 +71,8 @@
                                 </div>
                             </form>
                         }
-                    </div>*@
-          @*          <div class="card-body">
+                    </div>
+                   <div class="card-body">
                         @if (Model.Comments != null && Model.Comments.Any())
                         {
                             @foreach (var comment in Model.Comments)
@@ -91,7 +91,7 @@
                             }
                         }
                     </div>
-                </div>*@
+                </div>
 
 
 
