--- a/Bloggie.Web/Views/Home/Index.cshtml
+++ b/Bloggie.Web/Views/Home/Index.cshtml
@@ -19,7 +19,8 @@
         </div>
 
         <div class="col-12 col-lg-6">
-            <img src="https://images.pexels.com/photos/57690/pexels-photo-57690.jpeg?auto=compress&cs=tinysrgb&w=600"
+          @*   <img src="https://images.pexels.com/photos/57690/pexels-photo-57690.jpeg?auto=compress&cs=tinysrgb&w=600" *@
+            <img src="https://picsum.photos/200" srcset=""
                  alt="Bloggie - Dev blogs"
                  class="d-block mx-lg-auto img-fluid" width="300" />
         </div>
